esercizio pari o dispari

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   
+  <div id="output-palindroma"></div>
+  <div id="output-pari-o-dispari"></div>
   <script src="js/script.js"></script>
 </body>
 </html>
